Layout issue fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -45,10 +45,22 @@
     width: 1400px;
     height: 100px;
     left: 200px;
-    padding-top: 10px;
+}
+
+.info_panel_part {
+    width: 1400px;
+    height: 100px;
     border: solid 1px #ffffff;
     background-color: #ffffff;
     box-shadow: 0 4px 2px -2px gray;
+}
+
+.left_panels {
+    margin-top: -35px;
+}
+
+.center_content {
+    margin-top: -35px;
 }
 
 .infopanel_avatar {
